--- a/clients.html
+++ b/clients.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?0c9860d54ad3cffff7c4" rel="stylesheet"></head>
+<link href="main.css?9bd4d8f33a6e00031cb3" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -59,9 +59,9 @@
                     <div class="clients-block__img w-full">
                         <img src='images/0814f70a9273426c66c5e9b01ab0f177.jpg' class="w-full object-cover">
                     </div>
-                    <div class="clients-block__btn">
+                    <!-- <div class="clients-block__btn">
                         read more
-                    </div>
+                    </div> -->
                 </div>
                 <div class="clients-block">
                     <div class="clients-block__title text-3xl lg:text-4xl">
@@ -73,9 +73,9 @@
                     <div class="clients-block__img w-full">
                         <img src='images/ce323c20b9c10a9e47b500cd1a528520.jpg' class="w-full object-cover">
                     </div>
-                    <div class="clients-block__btn">
+                    <!-- <div class="clients-block__btn">
                         read more
-                    </div>
+                    </div> -->
                 </div>
                 <div class="clients-block">
                     <div class="clients-block__title text-3xl lg:text-4xl">
@@ -87,9 +87,9 @@
                     <div class="clients-block__img w-full">
                         <img src='images/37afab8782f5592522d9aede6beefb3c.jpg' class="w-full object-cover">
                     </div>
-                    <div class="clients-block__btn">
+                    <!-- <div class="clients-block__btn">
                         read more
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -109,6 +109,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?0c9860d54ad3cffff7c4"></script></body>
+<script type="text/javascript" src="main.js?9bd4d8f33a6e00031cb3"></script></body>
 
 </html>
