--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?0c9860d54ad3cffff7c4" rel="stylesheet"></head>
+<link href="main.css?9bd4d8f33a6e00031cb3" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -67,9 +67,9 @@
                     <div class="clients-block__text text-xl">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
                     </div>
-                    <div class="clients-block__btn">
+                    <!-- <div class="clients-block__btn">
                         from 50$
-                    </div>
+                    </div> -->
                 </div>
                 <div class="clients-block">
                     <div class="clients-block__title text-3xl lg:text-4xl">
@@ -78,9 +78,9 @@
                     <div class="clients-block__text text-xl">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
                     </div>
-                    <div class="clients-block__btn">
+                    <!-- <div class="clients-block__btn">
                         from 20$
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="option-blocks">
@@ -151,6 +151,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?0c9860d54ad3cffff7c4"></script></body>
+<script type="text/javascript" src="main.js?9bd4d8f33a6e00031cb3"></script></body>
 
 </html>
