--- a/clients.html
+++ b/clients.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?2a004c9816bb4dbb222c" rel="stylesheet"></head>
+<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -51,13 +51,13 @@
             <div class="clients-container">
                 <div class="clients-block">
                     <div class="clients-block__title text-3xl lg:text-4xl">
-                        Business
+                        Russian Helicopters
                     </div>
                     <div class="clients-block__text text-xl">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
-                    </div>
+                        Russian Helicopters is a leading player in the global helicopter industry, the only Russian rotorcraft designer and manufacturer. We are also one of the few companies worldwide having the capabilities for designing, manufacturing, servicing and testing
+                        modern civil and military helicopters.</div>
                     <div class="clients-block__img w-full">
-                        <img src='images/0814f70a9273426c66c5e9b01ab0f177.jpg' class="w-full object-cover">
+                        <img src='images/d92415db09a37f35bcd96b866bb03dad.jpg' class="w-full object-cover">
                     </div>
                     <!-- <div class="clients-block__btn">
                         read more
@@ -65,13 +65,12 @@
                 </div>
                 <div class="clients-block">
                     <div class="clients-block__title text-3xl lg:text-4xl">
-                        Magazines
+                        Sberbank
                     </div>
                     <div class="clients-block__text text-xl">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
-                    </div>
+                        Sberbank is the largest bank in Russia, Central and Eastern Europe, and one of the leading financial institutions worldwide</div>
                     <div class="clients-block__img w-full">
-                        <img src='images/ce323c20b9c10a9e47b500cd1a528520.jpg' class="w-full object-cover">
+                        <img src='images/63315619318e32493c317bd356fbd856.png' class="w-full object-cover">
                     </div>
                     <!-- <div class="clients-block__btn">
                         read more
@@ -93,22 +92,22 @@
                 </div>
             </div>
         </div>
-
         <footer>
             <div class="footer-phone py-4 w-full md:w-1/4">
-                <a href="tel:+79999999999">+79999999999</a>
+                <a href="tel:+79165118255">+79165118255(Rus)</a>
+                <a href="tel:+447757361333">+447757361333(UK)</a>
             </div>
             <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
                 <div class="footer-icon"><i class="fab fa-facebook"></i></div>
+                <div class="footer-icon"><i class="fab fa-vk"></i></div>
+                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
                 <div class="footer-icon"><i class="fab fa-instagram"></i></div>
-                <div class="footer-icon"><i class="fab fa-twitter"></i></div>
-                <div class="footer-icon"><i class="fab fa-google"></i></div>
             </div>
             <div class="footer-mail py-4 w-full md:w-1/4">
                 <a href="mailto:test@gmail.com">test@gmail.com</a>
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?2a004c9816bb4dbb222c"></script></body>
+<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
 
 </html>
