--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?2a004c9816bb4dbb222c" rel="stylesheet"></head>
+<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -42,37 +42,39 @@
         <div class="main-title center-block">
             <div class="main-title__logo">Anthony Kent</div>
             <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
-            <div class="main-title__about"><a href="#about">about me</a></div>
+            <div class="main-title__about scrolling"><a href="#about">about me</a></div>
         </div>
         <div class="container flex justify-between flex-wrap" id="about">
             <div class="about-img w-full lg:w-1/2">
-                <img src='images/24fddc5e56e3399918475e3580af1640.jpg' class="w-full object-cover">
+                <img src='images/2fb85ddfae9bd154da2d81645038a11c.png' class="w-full object-cover">
             </div>
             <div class="about-text w-full lg:w-1/2">
                 <div class="about-text__h1 text-3xl lg:text-4xl">
                     Anthony Kent
                 </div>
                 <div class="about-text__title text-base lg:text-xl">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis at laboriosam quibusdam porro minus cum blanditiis aliquid quasi dicta veniam perspiciatis itaque, architecto, numquam expedita impedit possimus eius quis! Nemo <br>                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et natus dolorum laudantium aliquam quibusdam illum molestias minus labore nesciunt? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, minima itaque
-                    dolore, quos, odio velit omnis aliquid harum earum inventore doloremque recusandae labore ut ad.
-                </div>
+                    A famous Russian man once said, ‘Let me speak from my heart in English’. A not very famous Englishman has a message for you: Don’t even think about translating your marketing materials from Russian into English, for the love of god, do not do it! Products
+                    and services don’t always sell themselves. That’s where I come in. With a fresh set of eyes, I’ll let you know quickly if I can help build you a bigger stage, put you in the spotlight and give you a louder voice. An Englishman on a
+                    world tour in 1998, I only came to Russia for 6 months. Here I am, 22 years later, still in Moscow and counting. All that time spent working with the big boys in the Russian business world. Helping them to say things clearer, better,
+                    louder and more persuasively. To grow your business you need to attract, engage and persuade your audience both intellectually and emotionally. Let’s see if I can help</div>
             </div>
         </div>
         <footer>
             <div class="footer-phone py-4 w-full md:w-1/4">
-                <a href="tel:+79999999999">+79999999999</a>
+                <a href="tel:+79165118255">+79165118255(Rus)</a>
+                <a href="tel:+447757361333">+447757361333(UK)</a>
             </div>
             <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
                 <div class="footer-icon"><i class="fab fa-facebook"></i></div>
+                <div class="footer-icon"><i class="fab fa-vk"></i></div>
+                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
                 <div class="footer-icon"><i class="fab fa-instagram"></i></div>
-                <div class="footer-icon"><i class="fab fa-twitter"></i></div>
-                <div class="footer-icon"><i class="fab fa-google"></i></div>
             </div>
             <div class="footer-mail py-4 w-full md:w-1/4">
                 <a href="mailto:test@gmail.com">test@gmail.com</a>
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?2a004c9816bb4dbb222c"></script></body>
+<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
 
 </html>
