--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?2a004c9816bb4dbb222c" rel="stylesheet"></head>
+<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -39,44 +39,55 @@
                 <div class="header-burger__line"></div>
             </div>
         </header>
-        <div class="w-full flex flex-wrap contacts-container  center-block">
+        <div class="w-full flex flex-wrap contacts-container">
             <div class="contacts-part w-full md:w-1/2 flex justify-center py-4">
                 <div class="contacts-container__block">
                     <div class="contact-title">
-                        London, UK
+                        Moscow office
                     </div>
                     <div class="contact-address">
-                        <div class="p">Address: 101996, Moscow, st. Kuznetsk bridge, d. 21/5, office 5038</div>
-                        <div class="p">Phones: +7 (495) 626-04-73, (495) 626-03-76, +79165118255 (phone during quarantine)</div>
-                        <div class="p">Opening hours: Mon-Fri, from 9:00 to 18:00</div>
-                        <div class="p">E-mail: info@bblc.ru</div>
+                        <div class="p">101996, Moscow, Kuznetsky Most str., 21/5, office 5038. </div>
                         <div class="p">M. Lubyanka, metro Kuznetsk bridge (5 minutes walk)</div>
+                        <div class="p">Anthony@....com/net</div>
+                        <div class="p">
+                            <a href="tel:+79165118255">+79165118255 (Rus)</a></div>
+                        <div class="p">
+                            <a href="tel:+447757361333">+447757361333 (UK)</a></div>
                     </div>
                 </div>
             </div>
             <div class="contacts-part w-full md:w-1/2">
                 <div class="contacts-container__block">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.4733995464!2d-0.2416810908786884!3d51.528558241786754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2z0JvQvtC90LTQvtC9LCDQktC10LvQuNC60L7QsdGA0LjRgtCw0L3QuNGP!5e0!3m2!1sru!2sru!4v1584706896763!5m2!1sru!2sru"
-                        width="100%" height="100%" class="gmap" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe></div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5081.303891789334!2d37.62283671500776!3d55.761122043412314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a5d049cedd5%3A0x87249d53042645b6!2sBritish%20Business%20Language%20Centre%2C%20School%20of%20English!5e0!3m2!1sen!2sru!4v1586093709702!5m2!1sen!2sru"
+                        width="100%" height="100%" class="gmap" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
+                </div>
             </div>
         </div>
         <div class="container">
             <div class="request">
                 <div class="request-title">
-                    Do you need the help of an experienced freelance copywriter?
+                    I can usually be found in Moscow or London, but thanks to skype and zoom, the world has become a much smaller place. Wherever you are on the planet, drop me a line @ (email address) or even better, fill out the form below and I will get back to you. Quickly.
                 </div>
                 <div class="request-form">
                     <div class="request-form__inner">
                         <div class="request-input">
-                            <input type="text" placeholder="Your phone">
+                            <!-- <div class="">'Name' (Required)</div> -->
+                            <input type="text" placeholder="'Name' (Required)">
                         </div>
                         <div class="request-input">
-                            <input type="text" placeholder="Your e-mail">
+                            <!-- <div class="">'Company name' (Required)</div> -->
+                            <input type="text" placeholder="'Company name' (Required)">
                         </div>
                         <div class="request-input">
-                            <input type="text" placeholder="Your name">
+                            <!-- <div class="">'Contact telephone number' (Required)</div> -->
+                            <input type="text" placeholder="'Contact telephone number' (Required)">
                         </div>
                         <div class="request-input">
+                            <!-- <div class="">'Subject'</div> -->
+                            <input type="text" placeholder="'Subject'">
+                        </div>
+                        <div class="request-input">
+                            <!-- <div class="">'Your message'</div> -->
                             <textarea placeholder="Your Message"></textarea>
                         </div>
                     </div>
@@ -88,19 +99,20 @@
         </div>
         <footer>
             <div class="footer-phone py-4 w-full md:w-1/4">
-                <a href="tel:+79999999999">+79999999999</a>
+                <a href="tel:+79165118255">+79165118255(Rus)</a>
+                <a href="tel:+447757361333">+447757361333(UK)</a>
             </div>
             <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
                 <div class="footer-icon"><i class="fab fa-facebook"></i></div>
+                <div class="footer-icon"><i class="fab fa-vk"></i></div>
+                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
                 <div class="footer-icon"><i class="fab fa-instagram"></i></div>
-                <div class="footer-icon"><i class="fab fa-twitter"></i></div>
-                <div class="footer-icon"><i class="fab fa-google"></i></div>
             </div>
             <div class="footer-mail py-4 w-full md:w-1/4">
                 <a href="mailto:test@gmail.com">test@gmail.com</a>
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?2a004c9816bb4dbb222c"></script></body>
+<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
 
 </html>
