--- a/progress.html
+++ b/progress.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?2a004c9816bb4dbb222c" rel="stylesheet"></head>
+<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -77,20 +77,21 @@
             </div>
         </div>
         <footer>
-            <div class="footer-phone py-4 w-full md:w-1/4 ">
-                <a href="tel:+79999999999 ">+79999999999</a>
+            <div class="footer-phone py-4 w-full md:w-1/4">
+                <a href="tel:+79165118255">+79165118255(Rus)</a>
+                <a href="tel:+447757361333">+447757361333(UK)</a>
             </div>
-            <div class="footer-icons flex justify-center py-4 w-full md:w-2/4 ">
-                <div class="footer-icon "><i class="fab fa-facebook "></i></div>
-                <div class="footer-icon "><i class="fab fa-instagram "></i></div>
-                <div class="footer-icon "><i class="fab fa-twitter "></i></div>
-                <div class="footer-icon "><i class="fab fa-google "></i></div>
+            <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
+                <div class="footer-icon"><i class="fab fa-facebook"></i></div>
+                <div class="footer-icon"><i class="fab fa-vk"></i></div>
+                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
+                <div class="footer-icon"><i class="fab fa-instagram"></i></div>
             </div>
-            <div class="footer-mail py-4 w-full md:w-1/4 ">
-                <a href="mailto:test@gmail.com ">test@gmail.com</a>
+            <div class="footer-mail py-4 w-full md:w-1/4">
+                <a href="mailto:test@gmail.com">test@gmail.com</a>
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?2a004c9816bb4dbb222c"></script></body>
+<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
 
 </html>
