--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?2a004c9816bb4dbb222c" rel="stylesheet"></head>
+<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -48,8 +48,45 @@
             </div>
         </div> -->
         <div class="container center-block">
+            <div class="clients-container">
+                <div class="clients-block">
+                    <div class="clients-block__title text-3xl lg:text-4xl">
+                        Services
+                    </div>
+                    <div class="clients-block__text text-xl">
+                        <ul>
+                            <li>Taglines and business names</li>
+                            <li>Websites</li>
+                            <li>Brochures</li>
+                            <li>Sales letters</li>
+                            <li>Video marketing scripts</li>
+                            <li>Print advertisements</li>
+                            <li>White papers</li>
+                            <li>Press releases</li>
+                            <li>SEO</li>
+                            <li>Blogs</li>
+                            <li>Radio and television advertising copy</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="clients-block">
+                    <div class="clients-block__title text-3xl lg:text-4xl">
+                        Presentations
+                    </div>
+                    <div class="clients-block__text text-xl">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
+                    </div>
+                    <div class="flex justify-start">
+                        <div class="main-btn py-3 px-4 mx-2">Presentation 1 (.pdf)</div>
+                        <div class="main-btn py-3 px-4 mx-2">Presentation 2 (.pdf)</div>
+                    </div>
+                    <!-- <div class="clients-block__btn">
+                        from 20$
+                    </div> -->
+                </div>
+            </div>
             <div class="container clients-option">
-                <div class="options justify-center md:justify-between">
+                <div class="options scrolling justify-center md:justify-between">
                     <div class="options-item"><a href="#inform">Inform</a></div>
                     <div class="options-item"><a href="#educate">Educate</a></div>
                     <div class="options-item"><a href="#attract">Attract</a></div>
@@ -59,98 +96,67 @@
                     <div class="options-item"><a href="#sell">Sell</a></div>
                 </div>
             </div>
-            <div class="clients-container">
-                <div class="clients-block">
-                    <div class="clients-block__title text-3xl lg:text-4xl">
-                        Ads text
-                    </div>
-                    <div class="clients-block__text text-xl">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
-                    </div>
-                    <!-- <div class="clients-block__btn">
-                        from 50$
-                    </div> -->
-                </div>
-                <div class="clients-block">
-                    <div class="clients-block__title text-3xl lg:text-4xl">
-                        Business article
-                    </div>
-                    <div class="clients-block__text text-xl">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
-                    </div>
-                    <!-- <div class="clients-block__btn">
-                        from 20$
-                    </div> -->
-                </div>
-            </div>
             <div class="option-blocks">
-                <div class="options-block" id="inform">
+                <div class="options-block w-full md:w-1/2" id="inform">
                     <div class="options-block__title">
                         Inform
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-                <div class="options-block" id="educate">
+                <div class="options-block w-full md:w-1/2" id="educate">
                     <div class="options-block__title">
                         Educate
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-                <div class="options-block" id="attract">
+                <div class="options-block w-full md:w-1/2" id="attract">
                     <div class="options-block__title">
                         Attract
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-                <div class="options-block" id="inspire">
+                <div class="options-block w-full md:w-1/2" id="inspire">
                     <div class="options-block__title">
                         Inspire
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-                <div class="options-block" id="persuade">
+                <div class="options-block w-full md:w-1/2" id="persuade">
                     <div class="options-block__title">
                         Persuade
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-                <div class="options-block" id="convince">
+                <div class="options-block w-full md:w-1/2" id="convince">
                     <div class="options-block__title">
                         Convince
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-                <div class="options-block" id="sell">
+                <div class="options-block w-full md:w-1/2" id="sell">
                     <div class="options-block__title">
                         Sell
                     </div>
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iste culpa explicabo placeat delectus eum illum ea ipsum dolorem, repellat voluptatum quae, non excepturi laboriosam quas maiores numquam aliquid molestias architecto
-                        et. Adipisci necessitatibus, tenetur quia obcaecati maxime consequuntur sunt eos minima porro unde quod voluptatem, quae exercitationem, minus aspernatur?</div>
+                    <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
             </div>
         </div>
-
         <footer>
             <div class="footer-phone py-4 w-full md:w-1/4">
-                <a href="tel:+79999999999">+79999999999</a>
+                <a href="tel:+79165118255">+79165118255(Rus)</a>
+                <a href="tel:+447757361333">+447757361333(UK)</a>
             </div>
             <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
                 <div class="footer-icon"><i class="fab fa-facebook"></i></div>
+                <div class="footer-icon"><i class="fab fa-vk"></i></div>
+                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
                 <div class="footer-icon"><i class="fab fa-instagram"></i></div>
-                <div class="footer-icon"><i class="fab fa-twitter"></i></div>
-                <div class="footer-icon"><i class="fab fa-google"></i></div>
             </div>
             <div class="footer-mail py-4 w-full md:w-1/4">
                 <a href="mailto:test@gmail.com">test@gmail.com</a>
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?2a004c9816bb4dbb222c"></script></body>
+<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
 
 </html>
