--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
+<link href="main.css?9501ea36e959d7b36382" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -47,8 +47,19 @@
                 <div class="clients-container__block">ff</div>
             </div>
         </div> -->
-        <div class="container center-block">
-            <div class="clients-container">
+        <div class="container clients-option">
+            <div class="options scrolling md:justify-between">
+                <div class="options-item"><a href="#inform">Inform</a></div>
+                <div class="options-item"><a href="#educate">Educate</a></div>
+                <div class="options-item"><a href="#attract">Attract</a></div>
+                <div class="options-item"><a href="#inspire">Inspire</a></div>
+                <div class="options-item"><a href="#persuade">Persuade</a></div>
+                <div class="options-item"><a href="#convince">Convince</a></div>
+                <div class="options-item"><a href="#sell">Sell</a></div>
+            </div>
+        </div>
+        <div class="container center-block pt-4">
+            <div class="clients-containe">
                 <div class="clients-block">
                     <div class="clients-block__title text-3xl lg:text-4xl">
                         Services
@@ -66,37 +77,12 @@
                             <li>SEO</li>
                             <li>Blogs</li>
                             <li>Radio and television advertising copy</li>
+                            <li>Presentations</li>
                         </ul>
                     </div>
                 </div>
-                <div class="clients-block">
-                    <div class="clients-block__title text-3xl lg:text-4xl">
-                        Presentations
-                    </div>
-                    <div class="clients-block__text text-xl">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
-                    </div>
-                    <div class="flex justify-start">
-                        <div class="main-btn py-3 px-4 mx-2">Presentation 1 (.pdf)</div>
-                        <div class="main-btn py-3 px-4 mx-2">Presentation 2 (.pdf)</div>
-                    </div>
-                    <!-- <div class="clients-block__btn">
-                        from 20$
-                    </div> -->
-                </div>
             </div>
-            <div class="container clients-option">
-                <div class="options scrolling justify-center md:justify-between">
-                    <div class="options-item"><a href="#inform">Inform</a></div>
-                    <div class="options-item"><a href="#educate">Educate</a></div>
-                    <div class="options-item"><a href="#attract">Attract</a></div>
-                    <div class="options-item"><a href="#inspire">Inspire</a></div>
-                    <div class="options-item"><a href="#persuade">Persuade</a></div>
-                    <div class="options-item"><a href="#convince">Convince</a></div>
-                    <div class="options-item"><a href="#sell">Sell</a></div>
-                </div>
-            </div>
-            <div class="option-blocks">
+            <!-- <div class="option-blocks">
                 <div class="options-block w-full md:w-1/2" id="inform">
                     <div class="options-block__title">
                         Inform
@@ -139,7 +125,7 @@
                     </div>
                     <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <footer>
             <div class="footer-phone py-4 w-full md:w-1/4">
@@ -157,6 +143,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
+<script type="text/javascript" src="main.js?9501ea36e959d7b36382"></script></body>
 
 </html>
