--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
+<link href="main.css?9501ea36e959d7b36382" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -72,19 +72,19 @@
                     <div class="request-form__inner">
                         <div class="request-input">
                             <!-- <div class="">'Name' (Required)</div> -->
-                            <input type="text" placeholder="'Name' (Required)">
+                            <input type="text" placeholder="Name">
                         </div>
                         <div class="request-input">
                             <!-- <div class="">'Company name' (Required)</div> -->
-                            <input type="text" placeholder="'Company name' (Required)">
+                            <input type="text" placeholder="Company name">
                         </div>
                         <div class="request-input">
                             <!-- <div class="">'Contact telephone number' (Required)</div> -->
-                            <input type="text" placeholder="'Contact telephone number' (Required)">
+                            <input type="text" placeholder="Contact telephone number">
                         </div>
                         <div class="request-input">
                             <!-- <div class="">'Subject'</div> -->
-                            <input type="text" placeholder="'Subject'">
+                            <input type="text" placeholder="Subject">
                         </div>
                         <div class="request-input">
                             <!-- <div class="">'Your message'</div> -->
@@ -113,6 +113,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
+<script type="text/javascript" src="main.js?9501ea36e959d7b36382"></script></body>
 
 </html>
