--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?bd994f953af9165eb4f2" rel="stylesheet"></head>
+<link href="main.css?9501ea36e959d7b36382" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -43,41 +43,69 @@
             <div class="faq">
                 <div class="faq-item">
                     <div class="faq-item__question">
-                        <div class="faq-question__title">What does a copywriter do?</div>
+                        <div class="faq-question__title">What is copywriting? Do I need a copywriter?</div>
                         <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
                     </div>
                     <div class="faq-item__answer">
-                        From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
-                        action. As you may have discovered yourself, this is not always as straightforward as it sounds. Sometimes you can hammer out a page of brochure copy first time within a couple of hours. At other times you can spend days agonising
-                        over a single strapline. Creativity doesn’t come on tap. It doesn’t just drop off the end of a production line. Natural talent is a bonus but there’s no substitute for the knowledge and judgement that comes with years of experience,
-                        huge success and the odd catastrophe. Whether a brochure or a website, an advertisement or sales letter. Whether it’s for customers, suppliers or any other stakeholder. Good copy should be straightforward without being simple,
-                        clever without being smug, lively without being breathless.
+                        Only you can answer these questions. Good copywriting can help you educate, inform, inspire and attract clients. Is style, image and presentation important to you? Do you want to engage and attract your audience intellectually and emotionally? Do you
+                        want to grow your business and increase your sales? If you answered ‘yes’ to these questions, then you need a copywriter.
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-item__question">
-                        <div class="faq-question__title">What does a copywriter do?</div>
+                        <div class="faq-question__title">What does the copywriting process involve?</div>
                         <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
                     </div>
                     <div class="faq-item__answer">
-                        From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
-                        action. As you may have discovered yourself, this is not always as straightforward as it sounds. Sometimes you can hammer out a page of brochure copy first time within a couple of hours. At other times you can spend days agonising
-                        over a single strapline. Creativity doesn’t come on tap. It doesn’t just drop off the end of a production line. Natural talent is a bonus but there’s no substitute for the knowledge and judgement that comes with years of experience,
-                        huge success and the odd catastrophe. Whether a brochure or a website, an advertisement or sales letter. Whether it’s for customers, suppliers or any other stakeholder. Good copy should be straightforward without being simple,
-                        clever without being smug, lively without being breathless.
+                        Brief Tell me everything about your business, your clients, your audience and what you are trying to say. Proposal I will send you through a proposal of how I can help. Questions You will then get a copywriting brief, asking for more detailed information.
+                        I will also do my own research. Draft This is just the start of the conversation. You will receive a copy of my first draft and after that, we can discuss, review, revise or even take an axe to it. You should read it carefully
+                        to see if I have understood your product, business, client, target audience and message. Is the language, style, tone of voice, spelling and grammar correct? Let’s do a feedback session and we can tweak, polish and perfect your
+                        message. I will then submit the final version.
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-item__question">
-                        <div class="faq-question__title">What does a copywriter do?</div>
+                        <div class="faq-question__title">How long does it take?</div>
                         <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
                     </div>
                     <div class="faq-item__answer">
-                        From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
-                        action. As you may have discovered yourself, this is not always as straightforward as it sounds. Sometimes you can hammer out a page of brochure copy first time within a couple of hours. At other times you can spend days agonising
-                        over a single strapline. Creativity doesn’t come on tap. It doesn’t just drop off the end of a production line. Natural talent is a bonus but there’s no substitute for the knowledge and judgement that comes with years of experience,
-                        huge success and the odd catastrophe. Whether a brochure or a website, an advertisement or sales letter. Whether it’s for customers, suppliers or any other stakeholder. Good copy should be straightforward without being simple,
-                        clever without being smug, lively without being breathless.
+                        Depends on size and complexity, but I will meet an agreed deadline. Be careful with last minute stuff, we should never compromise on quality
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        <div class="faq-question__title">What if I am not happy with the first draft?</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
+                    </div>
+                    <div class="faq-item__answer">
+                        Nobody is. The first draft is always the start of the conversation.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        <div class="faq-question__title">What if I am not happy with the first draft?</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
+                    </div>
+                    <div class="faq-item__answer">
+                        Nobody is. The first draft is always the start of the conversation.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        <div class="faq-question__title">What if I am not happy with the first draft?</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
+                    </div>
+                    <div class="faq-item__answer">
+                        Nobody is. The first draft is always the start of the conversation.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        <div class="faq-question__title">What if I am not happy with the first draft?</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
+                    </div>
+                    <div class="faq-item__answer">
+                        Nobody is. The first draft is always the start of the conversation.
                     </div>
                 </div>
                 <div class="main-btn py-3 px-4 mx-4 md:mx-6">The copywriting brief (.pdf)</div>
@@ -99,6 +127,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?bd994f953af9165eb4f2"></script></body>
+<script type="text/javascript" src="main.js?9501ea36e959d7b36382"></script></body>
 
 </html>
